--- a/style.css
+++ b/style.css
@@ -1,24 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" title="Basic" />
 <title>Experiments with CSS</title>
-<style type='text/css'>
-   @media screen {
-            body {
-                color: black;
-                background-color: yellow;
-            }
-        }
-
-        
-        @media print {
-            body {
-                color: black;
-                background-color: white;
-            }
-        }
-
-  <link rel="stylesheet" type="text/css" href="http://ln.hixie.ch/" media="screen" title="Basic" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" title="Basic" />
+@import "styles.css";  @import url("styles.css");
 
    p {
       padding: 0;
@@ -57,6 +41,22 @@
       color: red; /* Adding color property for h2 */
       margin: 0.67em 0 0.13em 0; /* Added margin for h2 */
    }
+   @media screen {
+    /* Styles for screen media */
+    body {
+        color: black;
+        background-color: yellow;
+    }
+}
+
+@media print {
+    /* Styles for print media */
+    body {
+        color: black;
+        background-color: white;
+    }
+}
+
 
    /* Background image CSS explanation */
    /* Backgrounds don't have to be plain text colors. They can be images! */
